-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.2
-
None
-
-
2ab72cf40 (dev)
Given the following function which is defined by prepending "::":
class cl: public QObject { Q_OBJECT void func(); }; void ::cl::func() { tr("text"); }
Running lupdate results in the following warning:
Qualifying with unknown namespace/class ::void
the resulted ps file does not have the correct context:
<!DOCTYPE TS> <TS version="2.1"> <context> <name>void::cl</name> <message> <location filename="main.cpp" line="34"/> <source>text</source> <translation type="unfinished"></translation> </message> </context> </TS>
For Gerrit Dashboard: QTBUG-131282 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
605230,1 | lupdate: Correct Context in Function Definitions with Prepended "::" | dev | qt/qttools | Status: ABANDONED | 0 | 0 |
605262,7 | lupdate: Correct Context in Function Definitions with Prepended "::" | dev | qt/qttools | Status: MERGED | +2 | +1 |