lupdate: Correct Context in Function Definitions with Prepended "::"

If a function is defined with prepended "::", lupdate confuses the
context in the function:

void ::cl::func() { tr("text"); }

running lupdates results in a warning and a wrong context in
the .ts file:

<context>
    <name>void::cl</name>
...

Fix the parser to correctly distinguish between the return type
and the context.

Fixes: QTBUG-131282
Change-Id: I66bde64b370a16c553edf2ccda89bf16c18bc733
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>